--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.2
   firebase_database: ^8.2.0
+  firebase_auth: ^3.3.2
   provider: ^6.0.1
 
 dev_dependencies:
